2007-02-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m: added an implementation of
	makeObjectsPerform:withObject:withObject: for GNUstep
	compatibility.
	
	* OGoContentStore/GNUmakefile, Protocols/common.make,
	SoObjects/common.make, UI/common.make: install in
	GNUSTEP_INSTALLATION_DIR instead of GNUSTEP_USER_DIR.

2007-02-07  Ludovic Marcotte <ludovic@inverse.ca>

	* UI/Scheduler/English.lproj/Localizable.strings
	  Fixed typo for "Agendas" 


2007-02-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailTree.m ([UIxMailTree
	-getTitle:folderType:andIcon:forObject:]): disabled Sieve folders
	for the moment.

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-checkLogin:_loginpassword:_pwd]): fixed a bug where a wrong
	password would be accepted anyway as long as its length was > 0.
	This can be the case ONLY when LDAP is disabled otherwise we have
	a serious security issue...

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -roleOfUser:logininContext:context]): if a
	user is not an organizer nor a participant, he is declared as
	"Owner" if he owns the calendar the entry where the entry is
	contained. Other cases should not be possible.

2007-02-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactEditor.m: display and handle the new
	Freebusy URL entry.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -_searchAttributes]): retrieve "calFBURL"
	from the server.

	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
	-vCard]): put the LDAP "calFBURL" field in the vCard's "FBURL"
	entry.

2007-01-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -sendEMailNotifications]): new method that
	returns the value of ud "SOGoAppointmentSendEMailNotifications"
	(iMIP/iTIP).
	([SOGoCalendarComponent