@@ -1,3 +1,9 @@
+2007-02-08  Ludovic Marcotte <ludovic@inverse.ca>
+
+        * SoObjects/Mailer/SOGoMailFolder.m
+	  Priorize the look of folders before doing
+	  the one on messages. 
+
 2007-02-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/SOGo/NSArray+Utilities.m: added an implementation of
